src/tests/testfiles/variable-declarations/9.txt
testfiles/variable-declarations/9.c:5:5: error: incompatible types when assigning to type 'char' from type 'char *'
*hello = "uu"; // error
^
